# oriphim-infra

./: .demo_api_key  .env.example  .gitignore  .ui-removal-base-commit  .watcher_demo.db  ADVANCED_FEATURES.md  AGENTS.md  CTO_DECISIONS.md  DASHBOARD_PROD.txt  Dockerfile  MASTERDOC_FOUNDER-CTO.md  Makefile  PHASE1_IMPLEMENTATION.md  PRD_doc.md  QUICKSTART_PHASE1.md  README.md  UI_PIVOT_COMPLETE.md  docker-compose.yml  edg_cases.md  edge_cases.md  generate_env.py  pyproject.toml  study_hard  test_dashboard_integration.py  test_demo.py  test_local_llm.py  testing123.md  tmpclaude-535f-cwd
.github/workflows/: client-dashboard-quality.yml
app/: main.py  models.py  models_dashboard.py  models_health.py
app/core/: compliance.py  confidence.py  constraints.py  drift.py  entropy.py  onboarding.py  parallel_validation.py  pdf_export.py  physical_validator.py  security.py  severity.py  simulation.py  storage.py  trade_guard.py  wrapper.py
app/routes/: __init__.py  onboarding.py
client-dashboard/: .env.example  .gitignore  Dockerfile  ORGANIZATION.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
client-dashboard/.husky/: pre-commit
client-dashboard/src/: App.tsx  main.tsx
client-dashboard/src/config/: env.ts  features.ts
client-dashboard/src/hooks/: useAPI.ts  useAuditLog.ts  useAuth.ts  useHealth.ts  useValidations.ts
client-dashboard/src/services/: api.ts  audit.ts  auth.ts  health.ts  incident.ts  onboarding.ts  validation.ts
client-dashboard/src/store/: authStore.ts  healthStore.ts  validationStore.ts
demo/: ARCHITECTURE.md  CHECKLIST.md  PRESENTER_SCRIPT.md  QUICKSTART.md  README.md  SUMMARY.md  TROUBLESHOOTING.md  VIDEO_SCRIPT.md  agent_protected.py  agent_unprotected.py  audit_pdf.py  mock_exchange.py  news_feed.py  requirements.txt  rewind_service.py  run_demo.py  test_demo.py
docs/: README.md
docs/architecture/: MASTERDOC_FOUNDER-CTO.md  REPO_ORGANIZATION.md  WHITEPAPER.md
docs/guides/: CLIENT_INTEGRATION.md  DASHBOARD_BUILD_GUIDE.md  ONBOARDING_COMPLETE.md  OPS_CLI_GUIDE.md  QUICKSTART_PHASE1.md  QUICKSTART_TESTING_CLIENT.md  TESTING_CLIENT_SUMMARY.md  TESTING_STRATEGY.md
rust-future/: IMPLEMENTATION.md  README.md  REFERENCE.md  organize-crates.bat  organize-crates.sh
rust-future/watcher_constraints/: Cargo.toml
rust-future/watcher_constraints/src/: executor.rs  lib.rs  parser.rs
rust-future/watcher_drift/: Cargo.toml
rust-future/watcher_drift/src/: detector.rs  lib.rs
rust-future/watcher_embedding/: Cargo.toml  build.rs
rust-future/watcher_embedding/src/: embedding.rs  lib.rs  model.rs
scripts/manual_tests/: test_live_llm.py
scripts/ops_cli/: __init__.py  deploy.py  health.py  incidents.py  keys.py  run_tier.py  tenants.py  users.py
scripts/setup/: README.md  bootstrap_demo.py  generate_env.py
tests/: conftest.py  test_hallucination_traps.py  test_high_priority_controls.py  test_security_phase1.py
tests/e2e/: test_trading_workflows.py
tests/fixtures/: test_api_key.py
tests/integration/: test_api_contracts.py
tests/performance/: locustfile.py
watcher_protocal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+65 files in other folders)
