[project]
name = "watcher-protocal"
version = "1.0.0"
description = "High-speed headless validation layer for AI outputs"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "numpy>=1.26",
  "scipy>=1.12",
  "sentence-transformers>=2.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27"
]
test-llm = [
  "openai>=1.3"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
