[package]
name = "watcher_constraints"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rayon = "1.8"
once_cell = "1.19"
nom = "7.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
