[package]
name = "watcher_embedding"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
ort = { version = "2.1", features = ["download-binaries"] }
tokenizers = "0.14"
ndarray = "0.15"
rayon = "1.8"
once_cell = "1.19"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
